--- a/mlflow-server/Dockerfile
+++ b/mlflow-server/Dockerfile
@@ -14,4 +14,4 @@ CMD ["mlflow", "server", \
     "--host", "0.0.0.0", \
     "--port", "5000", \
     "--backend-store-uri", "sqlite:////mlflow/mlflow.db", \
-    "--default-artifact-root", "/mlflow/artifacts"]
+    "--default-artifact-root", "s3://mlflow/"]
