--- a/training/requirements.txt
+++ b/training/requirements.txt
@@ -1,22 +1,24 @@
-alembic==1.16.4
+alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
 blinker==1.9.0
+boto3==1.40.27
+botocore==1.40.27
 cachetools==5.5.2
 certifi==2025.8.3
-cffi==1.17.1
+cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.2.1
 cloudpickle==3.1.1
 contourpy==1.3.2
-cryptography==45.0.6
+cryptography==45.0.7
 cycler==0.12.1
-databricks-sdk==0.64.0
+databricks-sdk==0.65.0
 docker==7.1.0
 exceptiongroup==1.3.0
 fastapi==0.116.1
 flask==3.1.2
-fonttools==4.59.1
+fonttools==4.59.2
 gitdb==4.0.12
 gitpython==3.1.45
 google-auth==2.40.3
@@ -29,14 +31,15 @@ idna==3.10
 importlib-metadata==8.7.0
 itsdangerous==2.2.0
 jinja2==3.1.6
-joblib==1.5.1
+jmespath==1.0.1
+joblib==1.5.2
 kiwisolver==1.4.9
 mako==1.3.10
 markupsafe==3.0.2
-matplotlib==3.10.5
-mlflow==3.3.1
-mlflow-skinny==3.3.1
-mlflow-tracing==3.3.1
+matplotlib==3.10.6
+mlflow==3.3.2
+mlflow-skinny==3.3.2
+mlflow-tracing==3.3.2
 numpy==2.2.6
 opentelemetry-api==1.36.0
 opentelemetry-sdk==1.36.0
@@ -48,7 +51,7 @@ protobuf==6.32.0
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
-pycparser==2.22
+pycparser==2.23
 pydantic==2.11.7
 pydantic-core==2.33.2
 pyparsing==3.2.3
@@ -57,7 +60,8 @@ pytz==2025.2
 pyyaml==6.0.2
 requests==2.32.5
 rsa==4.9.1
-scikit-learn==1.7.1
+s3transfer==0.14.0
+scikit-learn==1.7.2
 scipy==1.15.3
 six==1.17.0
 smmap==5.0.2
