--- a/kubernetes/mlflow-setup.yaml
+++ b/kubernetes/mlflow-setup.yaml
@@ -1,3 +1,56 @@
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-mlflow-db
+spec:
+  capacity:
+    storage: 1Gi
+  storageClassName: standard
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: /data/mlflow-db
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-mlflow-db
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: standard
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mlflow-server
+spec:
+  selector:
+    app: mlflow-server
+  ports:
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
+  type: ClusterIP
+---
+# NodePort Service for external access to MLflow UI
+apiVersion: v1
+kind: Service
+metadata:
+  name: mlflow-server-nodeport
+spec:
+  selector:
+    app: mlflow-server
+  ports:
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
+      nodePort: 30500
+  type: NodePort
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
