--- a/mlflow-server/requirements.txt
+++ b/mlflow-server/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
 blinker==1.9.0
+boto3==1.40.27
+botocore==1.40.27
 cachetools==5.5.2
 certifi==2025.8.3
 cffi==2.0.0
@@ -29,6 +31,7 @@ idna==3.10
 importlib-metadata==8.7.0
 itsdangerous==2.2.0
 jinja2==3.1.6
+jmespath==1.0.1
 joblib==1.5.2
 kiwisolver==1.4.9
 mako==1.3.10
@@ -57,6 +60,7 @@ pytz==2025.2
 pyyaml==6.0.2
 requests==2.32.5
 rsa==4.9.1
+s3transfer==0.14.0
 scikit-learn==1.7.2
 scipy==1.15.3
 six==1.17.0
