--- a/training/requirements.txt
+++ b/training/requirements.txt
@@ -2,8 +2,8 @@ alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
 blinker==1.9.0
-boto3==1.40.27
-botocore==1.40.27
+boto3==1.40.30
+botocore==1.40.30
 cachetools==5.5.2
 certifi==2025.8.3
 cffi==2.0.0
@@ -40,14 +40,14 @@ matplotlib==3.10.6
 mlflow==3.3.2
 mlflow-skinny==3.3.2
 mlflow-tracing==3.3.2
-numpy==2.2.6
-opentelemetry-api==1.36.0
-opentelemetry-sdk==1.36.0
-opentelemetry-semantic-conventions==0.57b0
+numpy==1.26.4
+opentelemetry-api==1.37.0
+opentelemetry-sdk==1.37.0
+opentelemetry-semantic-conventions==0.58b0
 packaging==25.0
 pandas==2.3.2
 pillow==11.3.0
-protobuf==6.32.0
+protobuf==6.32.1
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
@@ -61,7 +61,7 @@ pyyaml==6.0.2
 requests==2.32.5
 rsa==4.9.1
 s3transfer==0.14.0
-scikit-learn==1.7.2
+scikit-learn==1.4.1.post1
 scipy==1.15.3
 six==1.17.0
 smmap==5.0.2
