refactor: clean up codebase

--- a/kubernetes/train-job.yaml
+++ b/kubernetes/train-job.yaml
@@ -30,7 +30,7 @@ spec:
             - name: MLFLOW_TRACKING_URI
               value: "http://mlflow-server:5000"
             - name: DATA_PATH
-              value: s3://minio-bucket/new-data/
+              value: s3://training/vgm-datasets/video_game_sales.csv
           envFrom:
             - configMapRef:
                 name: minio-config
